# racelive

./: pyproject.toml
data/: livetime.csv  livetime_replay1.csv  racelive.json  scraping_control.json
src/racelive/: const.py  livego.py  main.py  racelive.code-workspace  scraperead.py  utils.py
src/racelive/pages/: 01_practice.py  02_race.py  03_weather.py  04_about.py
tests/: livego ver1.2.4.py  main ver1.2.5.py  racelive back.json  test_01.py
